--------------------------------------------------------
--  File created - Saturday-October-05-2024
--------------------------------------------------------
--------------------------------------------------------
--  DDL for Table LCSD_DISTRICT
--------------------------------------------------------

CREATE TABLE "SLLIAC"."LCSD_DISTRICT"
(	"DISTRICT_NAME_EN" VARCHAR2(255 BYTE),
     "DISTRICT_NAME_TC" VARCHAR2(255 BYTE)
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."LCSD_DISTRICT"."DISTRICT_NAME_EN" IS 'English Name of District';
   COMMENT ON COLUMN "SLLIAC"."LCSD_DISTRICT"."DISTRICT_NAME_TC" IS 'Traditional Chinese Name of District';
--------------------------------------------------------
--  DDL for Table LCSD_SOCCER_PITCH
--------------------------------------------------------

CREATE TABLE "SLLIAC"."LCSD_SOCCER_PITCH"
(	"PITCHTYPE" VARCHAR2(50 BYTE),
     "DESCRIPTION" VARCHAR2(50 BYTE),
     "PRICE" NUMBER
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH"."PITCHTYPE" IS 'Pitch Type avaliable to rent';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH"."DESCRIPTION" IS 'Detail Description of Pitch';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH"."PRICE" IS 'Price of Renting Soccer Pitch';
--------------------------------------------------------
--  DDL for Table LCSD_SOCCER_PITCH_SCHEDULE
--------------------------------------------------------

CREATE TABLE "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"
(	"ID" NUMBER(*,0),
     "DISTRICT_NAME_EN" VARCHAR2(255 BYTE),
     "DISTRICT_NAME_TC" NVARCHAR2(255),
     "VENUE_NAME_EN" VARCHAR2(255 BYTE),
     "VENUE_NAME_TC" NVARCHAR2(255),
     "VENUE_ADDRESS_EN" VARCHAR2(255 BYTE),
     "VENUE_ADDRESS_TC" NVARCHAR2(255),
     "VENUE_PHONE_NO" VARCHAR2(20 BYTE),
     "VENUE_LONGITUDE" VARCHAR2(20 BYTE),
     "VENUE_LATITUDE" VARCHAR2(20 BYTE),
     "FACILITY_TYPE_NAME_EN" VARCHAR2(255 BYTE),
     "FACILITY_TYPE_NAME_TC" VARCHAR2(255 BYTE),
     "FACILITY_LOCATION_NAME_EN" VARCHAR2(255 BYTE),
     "FACILITY_LOCATION_NAME_TC" VARCHAR2(255 BYTE),
     "AVAILABLE_DATE" VARCHAR2(20 BYTE),
     "SESSION_START_TIME" VARCHAR2(20 BYTE),
     "SESSION_END_TIME" VARCHAR2(20 BYTE),
     "AVAILABLE_COURTS" NUMBER(*,0),
     "STATUS_CODE" VARCHAR2(20 BYTE)
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."ID" IS 'Unique ID of Schedule';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."DISTRICT_NAME_EN" IS 'Distict name in English';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."DISTRICT_NAME_TC" IS 'Distict name in Chinese';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."VENUE_NAME_EN" IS 'Venue name in english';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."VENUE_NAME_TC" IS 'Venue name in Traitional Chinese';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."VENUE_ADDRESS_EN" IS 'Venue Address';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."VENUE_ADDRESS_TC" IS 'Venue Address';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."VENUE_PHONE_NO" IS 'Venue Phone Number';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."VENUE_LONGITUDE" IS 'Venue Longtitue';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."VENUE_LATITUDE" IS 'Venue Latitute';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."FACILITY_TYPE_NAME_EN" IS 'Venue Facility Type Name in English';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."FACILITY_TYPE_NAME_TC" IS 'Venue Facility Type Name in Chinese';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."FACILITY_LOCATION_NAME_EN" IS 'Venue Facility Location name in English';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."FACILITY_LOCATION_NAME_TC" IS 'Venue Facility Location name in Chinese';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."AVAILABLE_DATE" IS 'Avaliable Date in renting (e.g. 2020-01-01)';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."SESSION_START_TIME" IS 'Avaliable Session Start Time(e.g. 12:00)';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."SESSION_END_TIME" IS 'Avaliable Session End Time(e.g. 21:00)';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."AVAILABLE_COURTS" IS 'Avaliable Courts (Data come from LCSD ,even maked booking not affect this)';
   COMMENT ON COLUMN "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE"."STATUS_CODE" IS 'Status Code of Schedule';
--------------------------------------------------------
--  DDL for Table PSSUS_BOOKING_RECORD
--------------------------------------------------------

CREATE TABLE "SLLIAC"."PSSUS_BOOKING_RECORD"
(	"BOOKING_ID" NUMBER(*,0),
     "STUDENT_ID" VARCHAR2(255 BYTE),
     "CAMPAIGN_DETAIL" VARCHAR2(255 BYTE),
     "CAMPAIGN_REMARK" VARCHAR2(255 BYTE),
     "JOIN_PERSON" VARCHAR2(255 BYTE),
     "EMAIL" VARCHAR2(255 BYTE),
     "PHONE" VARCHAR2(20 BYTE),
     "PERSONAL_TRAINER" VARCHAR2(255 BYTE),
     "SCHEDULE_ID" NUMBER(*,0),
     "STATUS_CODE" VARCHAR2(255 BYTE),
     "RECORD_CREATE_DATE" VARCHAR2(20 BYTE)
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."BOOKING_ID" IS 'Unique Id for Booking';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."STUDENT_ID" IS 'Id from Student';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."CAMPAIGN_DETAIL" IS 'Campaign Detail(Name of Evnet)';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."CAMPAIGN_REMARK" IS 'Campaign Remark(For Remark of event)';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."JOIN_PERSON" IS 'Depecated Field, will remove soon
';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."EMAIL" IS 'Email from Student
';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."PHONE" IS 'Phone number from Student';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."PERSONAL_TRAINER" IS 'Option (Y/N) whether required personal trainer';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."SCHEDULE_ID" IS 'Schedule Id that booking reference from';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."STATUS_CODE" IS 'Status Code for the Booking(Approve/Not Approve/Avaliable,etc)';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_BOOKING_RECORD"."RECORD_CREATE_DATE" IS 'Record Create Date';
--------------------------------------------------------
--  DDL for Table PSSUS_JOIN_BOOKING_RECORD
--------------------------------------------------------

CREATE TABLE "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD"
(	"BOOKING_RECORD_ID" VARCHAR2(20 BYTE),
     "JOIN_ID" NUMBER,
     "JOINER_STUDENT_ID" VARCHAR2(20 BYTE),
     "JOINER_EMAIL" VARCHAR2(20 BYTE),
     "RECORD_CREATE_DATE" VARCHAR2(20 BYTE)
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD"."BOOKING_RECORD_ID" IS 'Booking Record Id';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD"."JOIN_ID" IS 'Join Record Id';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD"."JOINER_STUDENT_ID" IS 'Join Record Student Id ';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD"."JOINER_EMAIL" IS 'Joiner Email';
   COMMENT ON COLUMN "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD"."RECORD_CREATE_DATE" IS 'Record Create Date';
--------------------------------------------------------
--  DDL for Table UST_STUDENT_WALLET
--------------------------------------------------------

CREATE TABLE "SLLIAC"."UST_STUDENT_WALLET"
(	"EMAIL" VARCHAR2(255 BYTE),
     "WALLET_ID" NUMBER GENERATED BY DEFAULT AS IDENTITY MINVALUE 1 MAXVALUE 9999999999999999999999999999 INCREMENT BY 1 START WITH 1 CACHE 20 NOORDER  NOCYCLE  NOKEEP  NOSCALE ,
     "CURRBALANCE" NUMBER(10,2),
     "LASTMONTHBALANCELEFT" NUMBER(10,2)
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET"."EMAIL" IS 'Email of USTUser Student';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET"."WALLET_ID" IS 'Wallet Id ';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET"."CURRBALANCE" IS 'Current Balance of Wallet';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET"."LASTMONTHBALANCELEFT" IS 'Last Month Balance';
--------------------------------------------------------
--  DDL for Table UST_STUDENT_WALLET_TRANSACTION
--------------------------------------------------------

CREATE TABLE "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"
(	"WALLET_ID" NUMBER,
     "TRANSACTIONID" NUMBER,
     "AMOUNT" NUMBER(10,2),
     "TRANSACTIONLOG" VARCHAR2(255 BYTE),
     "BOOKING_ID" NUMBER,
     "TXN_DATE" VARCHAR2(20 BYTE),
     "ACTION_NAME" VARCHAR2(20 BYTE)
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"."WALLET_ID" IS 'Wallet ID of Trasnsaction
';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"."TRANSACTIONID" IS 'Transaction Id of Transaction';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"."AMOUNT" IS 'Amount of Point Involved';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"."TRANSACTIONLOG" IS 'Transaction Log Detail';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"."BOOKING_ID" IS 'Booking Id of transaction refer to
';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"."TXN_DATE" IS 'Transaction Id';
   COMMENT ON COLUMN "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION"."ACTION_NAME" IS 'Action Name(CR/DR)';
--------------------------------------------------------
--  DDL for Table USTUSER
--------------------------------------------------------

CREATE TABLE "SLLIAC"."USTUSER"
(	"ID" NUMBER(19,0),
     "EMAIL" VARCHAR2(255 BYTE),
     "PASSWORD" VARCHAR2(2000 BYTE),
     "FIRSTNAME" VARCHAR2(255 BYTE),
     "LASTNAME" VARCHAR2(255 BYTE),
     "STUDENTID" VARCHAR2(20 BYTE),
     "PHONE" VARCHAR2(20 BYTE),
     "STUDYYEAR" VARCHAR2(20 BYTE),
     "PROGRAM" VARCHAR2(20 BYTE),
     "RIGHT" VARCHAR2(20 BYTE)
) SEGMENT CREATION IMMEDIATE
  PCTFREE 10 PCTUSED 40 INITRANS 1 MAXTRANS 255
 NOCOMPRESS LOGGING
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"   NO INMEMORY ;

COMMENT ON COLUMN "SLLIAC"."USTUSER"."ID" IS 'Unique Id of USTUSER';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."EMAIL" IS 'Email of User';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."PASSWORD" IS 'Hashed Password of User';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."FIRSTNAME" IS 'First Name of User';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."LASTNAME" IS 'Last Name of User';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."STUDENTID" IS 'Student Id of User';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."PHONE" IS 'Phone of User';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."STUDYYEAR" IS 'Study Year of User';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."PROGRAM" IS 'Program that user studied';
   COMMENT ON COLUMN "SLLIAC"."USTUSER"."RIGHT" IS 'Access Right (Student/Admin)';
--------------------------------------------------------
--  DDL for Index SYS_C00689340
--------------------------------------------------------

CREATE UNIQUE INDEX "SLLIAC"."SYS_C00689340" ON "SLLIAC"."LCSD_DISTRICT" ("DISTRICT_NAME_EN")
    PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260" ;
--------------------------------------------------------
--  DDL for Index SYS_C00689336
--------------------------------------------------------

CREATE INDEX "SLLIAC"."SYS_C00689336" ON "SLLIAC"."LCSD_SOCCER_PITCH" ("PITCHTYPE")
    PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260" ;
--------------------------------------------------------
--  DDL for Index SYS_C00689334
--------------------------------------------------------

CREATE UNIQUE INDEX "SLLIAC"."SYS_C00689334" ON "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE" ("ID")
    PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260" ;
--------------------------------------------------------
--  DDL for Index PSSUS_JOIN_BOOKING_RECORD_PK
--------------------------------------------------------

CREATE UNIQUE INDEX "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD_PK" ON "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD" ("JOIN_ID")
    PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260" ;
--------------------------------------------------------
--  DDL for Index UST_STUDENT_WALLET_PK
--------------------------------------------------------

CREATE UNIQUE INDEX "SLLIAC"."UST_STUDENT_WALLET_PK" ON "SLLIAC"."UST_STUDENT_WALLET" ("WALLET_ID")
    PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260" ;
--------------------------------------------------------
--  DDL for Index UST_STUDENT_WALLET_TRANSACTION_PK
--------------------------------------------------------

CREATE UNIQUE INDEX "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION_PK" ON "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION" ("TRANSACTIONID")
    PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260" ;
--------------------------------------------------------
--  DDL for Index USTUSER_PK
--------------------------------------------------------

CREATE UNIQUE INDEX "SLLIAC"."USTUSER_PK" ON "SLLIAC"."USTUSER" ("EMAIL")
    PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260" ;
--------------------------------------------------------
--  Constraints for Table LCSD_DISTRICT
--------------------------------------------------------

ALTER TABLE "SLLIAC"."LCSD_DISTRICT" MODIFY ("DISTRICT_NAME_EN" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."LCSD_DISTRICT" MODIFY ("DISTRICT_NAME_TC" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."LCSD_DISTRICT" ADD CONSTRAINT "SYS_C00689340" PRIMARY KEY ("DISTRICT_NAME_EN")
    USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"  ENABLE;
--------------------------------------------------------
--  Constraints for Table LCSD_SOCCER_PITCH
--------------------------------------------------------

ALTER TABLE "SLLIAC"."LCSD_SOCCER_PITCH" ADD CONSTRAINT "SYS_C00689336" PRIMARY KEY ("PITCHTYPE") DEFERRABLE
  USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"  ENABLE;
ALTER TABLE "SLLIAC"."LCSD_SOCCER_PITCH" MODIFY ("PITCHTYPE" NOT NULL ENABLE);
--------------------------------------------------------
--  Constraints for Table LCSD_SOCCER_PITCH_SCHEDULE
--------------------------------------------------------

ALTER TABLE "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE" ADD CONSTRAINT "LCSD_SOCCER_PITCH_SCHEDULE_PK" PRIMARY KEY ("ID")
    USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"  ENABLE;
--------------------------------------------------------
--  Constraints for Table PSSUS_BOOKING_RECORD
--------------------------------------------------------

ALTER TABLE "SLLIAC"."PSSUS_BOOKING_RECORD" MODIFY ("BOOKING_ID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."PSSUS_BOOKING_RECORD" MODIFY ("STUDENT_ID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."PSSUS_BOOKING_RECORD" MODIFY ("SCHEDULE_ID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."PSSUS_BOOKING_RECORD" MODIFY ("EMAIL" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."PSSUS_BOOKING_RECORD" MODIFY ("JOIN_PERSON" NOT NULL ENABLE);
--------------------------------------------------------
--  Constraints for Table PSSUS_JOIN_BOOKING_RECORD
--------------------------------------------------------

ALTER TABLE "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD" ADD CONSTRAINT "PSSUS_JOIN_BOOKING_RECORD_PK" PRIMARY KEY ("JOIN_ID")
    USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"  ENABLE;
ALTER TABLE "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD" MODIFY ("JOIN_ID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."PSSUS_JOIN_BOOKING_RECORD" MODIFY ("BOOKING_RECORD_ID" NOT NULL ENABLE);
--------------------------------------------------------
--  Constraints for Table UST_STUDENT_WALLET
--------------------------------------------------------

ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET" MODIFY ("WALLET_ID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET" ADD CONSTRAINT "UST_STUDENT_WALLET_PK" PRIMARY KEY ("WALLET_ID")
    USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"  ENABLE;
--------------------------------------------------------
--  Constraints for Table UST_STUDENT_WALLET_TRANSACTION
--------------------------------------------------------

ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION" MODIFY ("WALLET_ID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION" MODIFY ("TRANSACTIONID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION" MODIFY ("AMOUNT" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION" ADD CONSTRAINT "UST_STUDENT_WALLET_TRANSACTION_PK" PRIMARY KEY ("TRANSACTIONID")
    USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"  ENABLE;
--------------------------------------------------------
--  Constraints for Table USTUSER
--------------------------------------------------------

ALTER TABLE "SLLIAC"."USTUSER" MODIFY ("EMAIL" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."USTUSER" MODIFY ("PASSWORD" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."USTUSER" MODIFY ("FIRSTNAME" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."USTUSER" MODIFY ("LASTNAME" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."USTUSER" MODIFY ("ID" NOT NULL ENABLE);
ALTER TABLE "SLLIAC"."USTUSER" ADD CONSTRAINT "USTUSER_PK" PRIMARY KEY ("EMAIL")
    USING INDEX PCTFREE 10 INITRANS 2 MAXTRANS 255 COMPUTE STATISTICS
  STORAGE(INITIAL 65536 NEXT 1048576 MINEXTENTS 1 MAXEXTENTS 2147483645
  PCTINCREASE 0 FREELISTS 1 FREELIST GROUPS 1
  BUFFER_POOL DEFAULT FLASH_CACHE DEFAULT CELL_FLASH_CACHE DEFAULT)
  TABLESPACE "ISOM3260"  ENABLE;
--------------------------------------------------------
--  Ref Constraints for Table LCSD_SOCCER_PITCH_SCHEDULE
--------------------------------------------------------

ALTER TABLE "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE" ADD CONSTRAINT "LCSD_SOCCER_PITCH_SCHEDULE_FK1" FOREIGN KEY ("FACILITY_TYPE_NAME_EN")
    REFERENCES "SLLIAC"."LCSD_SOCCER_PITCH" ("PITCHTYPE") ENABLE;
--------------------------------------------------------
--  Ref Constraints for Table PSSUS_BOOKING_RECORD
--------------------------------------------------------

ALTER TABLE "SLLIAC"."PSSUS_BOOKING_RECORD" ADD CONSTRAINT "PSSUS_BOOKING_RECORD_FK1" FOREIGN KEY ("EMAIL")
    REFERENCES "SLLIAC"."USTUSER" ("EMAIL") ENABLE;
ALTER TABLE "SLLIAC"."PSSUS_BOOKING_RECORD" ADD CONSTRAINT "PSSUS_BOOKING_RECORD_FK2" FOREIGN KEY ("SCHEDULE_ID")
    REFERENCES "SLLIAC"."LCSD_SOCCER_PITCH_SCHEDULE" ("ID") ENABLE;
--------------------------------------------------------
--  Ref Constraints for Table UST_STUDENT_WALLET
--------------------------------------------------------

ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET" ADD CONSTRAINT "UST_STUDENT_WALLET_FK1" FOREIGN KEY ("EMAIL")
    REFERENCES "SLLIAC"."USTUSER" ("EMAIL") ENABLE;
--------------------------------------------------------
--  Ref Constraints for Table UST_STUDENT_WALLET_TRANSACTION
--------------------------------------------------------

ALTER TABLE "SLLIAC"."UST_STUDENT_WALLET_TRANSACTION" ADD CONSTRAINT "UST_STUDENT_WALLET_TRANSACTION_FK1" FOREIGN KEY ("WALLET_ID")
    REFERENCES "SLLIAC"."UST_STUDENT_WALLET" ("WALLET_ID") ENABLE;
