erDiagram
    UST_STUDENT_WALLET ||--|{ UST_STUDENT_TRANSACTION : COLLECTS
    LCSD_DISTRICT ||--|{ LCSD_SOCCER_PITCH_SCHEDULE : HAS
    USTSTUDENT |{ -- o{ PSSUS_JOIN_BOOKING_RECORD : JOINS
    USTSTUDENT || -- o{ PSSUS_BOOKING_RECORD : MAKES
    ADMIN ||--o{ PSSUS_BOOKING_RECORD : MANAGE
    LCSD_SOCCER_PITCH_SCHEDULE ||--|{ PSSUS_BOOKING_RECORD : DELEGATED
    USTSTUDENT ||--|| UST_STUDENT_WALLET : OWNED
    PSSUS_BOOKING_RECORD ||--o{ PSSUS_JOIN_BOOKING_RECORD : CAN_HAVE
    PSSUS_BOOKING_RECORD ||--|{ UST_STUDENT_TRANSACTION : DEBITS

    UST_STUDENT_TRANSACTION {
        NUMBER TRANSACTION_ID PK
        NUMBER WALLET_ID FK
        NUMBER AMOUNT
        VARCHAR2 TRANSACTION_TYPE
        VARCHAR2 TRANSACTION_DESCRIPTION
    }
    LCSD_DISTRICT {
        NUMBER DISTRICT_ID PK
        VARCHAR2 DISTRICT_NAME_EN
        VARCHAR2 DISTRICT_NAME_TC
        VARCHAR2 DISTRICT_SHORTFORM
    }
    LCSD_SOCCER_PITCH_SCHEDULE {
        NUMBER ID PK
        VARCHAR2 DISTRICT_NAME_EN
        NVARCHAR2 DISTRICT_NAME_TC
        VARCHAR2 VENUE_NAME_EN
        NVARCHAR2 VENUE_NAME_TC
        VARCHAR2 VENUE_ADDRESS_EN
        NVARCHAR2 VENUE_ADDRESS_TC
        NUMBER VENUE_PHONE_NO
        NUMBER VENUE_LONGITUDE
        NUMBER VENUE_LATITUDE
        VARCHAR2 FACILITY_TYPE_NAME_EN
        VARCHAR2 FACILITY_TYPE_NAME_TC
        VARCHAR2 FACILITY_LOCATION_NAME_EN
        VARCHAR2 FACILITY_LOCATION_NAME_TC
        VARCHAR2 AVAILABLE_DATE
        VARCHAR2 SESSION_START_TIME
        VARCHAR2 SESSION_END_TIME
        NUMBER AVAILABLE_COURTS
        VARCHAR2 STATUS_CODE
    }
    PSSUS_BOOKING_RECORD {
        NUMBER BOOKING_ID PK
        VARCHAR2 STUDENT_ID
        VARCHAR2 CAMPAIGN_DETAIL
        VARCHAR2 CAMPAIGN_REMARK
        VARCHAR2 JOIN_PERSON
        VARCHAR2 EMAIL FK
        VARCHAR2 PHONE
        VARCHAR2 PERSONAL_TRAINER
        NUMBER SCHEDULE_ID PK,FK
        VARCHAR2 STATUS_CODE
    }
    PSSUS_JOIN_BOOKING_RECORD {
        NUMBER JOIN_ID PK
        VARCHAR2 BOOKING_RECORD_ID PK,FK
        VARCHAR2 JOINER_STUDENT_ID
        VARCHAR2 JOINER_EMAIL FK
    }
    UST_STUDENT_WALLET {
        NUMBER WALLETID PK
        NUMBER CURRBALANCE
        NUMBER LASTMONTHBALANCELEFT
        VARCHAR2 EMAIL FK
    }
    USTSTUDENT {
        NUMBER ID PK
        VARCHAR2 EMAIL PK
        VARCHAR2 PASSWORD 
        VARCHAR2 FIRSTNAME 
        VARCHAR2 LASTNAME 
        NUMBER STUDENTID
        NUMBER PHONE
        NUMBER STUDYYEAR
        VARCHAR2 WALLETID FK
        VARCHAR2 PROGRAM
        VARHCAR2 RIGHT
    }
    ADMIN {
        NUMBER ID PK
        VARCHAR2 EMAIL PK
        VARCHAR2 PASSWORD 
        VARCHAR2 FIRSTNAME 
        VARCHAR2 LASTNAME 
    }
